Refactored post fetching and implemented liked post fetching